party service tests